--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   intl: ^0.18.0
   http: ^1.1.0
   webview_flutter: ^4.10.0
+  webview_cookie_jar: ^0.0.1
 
 dev_dependencies:
   flutter_test:
