--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   http: ^1.1.0
   webview_flutter: ^4.10.0
   webview_cookie_jar: ^0.0.1
+  google_fonts: ^5.1.0
 
 dev_dependencies:
   flutter_test:
