--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -9,12 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   intl: ^0.18.0
   http: ^1.1.0
   webview_flutter: ^4.10.0
   webview_cookie_jar: ^0.0.1
   google_fonts: ^5.1.0
+  go_router: ^13.2.0
 
 dev_dependencies:
   flutter_test:
