--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -1,7 +1,7 @@
 name: Yellowstone
 description: A task management app
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -18,6 +18,7 @@ dependencies:
   webview_cookie_jar: ^0.0.1
   google_fonts: ^5.1.0
   go_router: ^13.2.0
+  package_info_plus: ^8.1.3
 
 dev_dependencies:
   flutter_test:
