--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_fonts: ^5.1.0
   go_router: ^13.2.0
   package_info_plus: ^8.1.3
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
