Task list activity

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,12 @@
             android:name=".MainActivity"
             android:exported="false"
             android:label="@string/app_name" />
-            
+
+        <activity
+            android:name=".ui.tasks.TaskListPageActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
+
         <service
             android:name=".services.connection.ConnectionService"
             android:enabled="true"
